--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,7 @@
 // colors
 $color-primary: #ef2042;
-$color-secondary: #fff8c5;
-$color-tertiary: #2ec210;
+$color-secondary: #ffebe9;
+
 $color-white: #fff;
 $color-black: #000;
 $color-grey-dark: #777;
